--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </div>
         <div class="input-and-title">
             <label for="pages">number of pages</label>
-            <input type="text" id="pages" name="pages">
+            <input type="text" id="pages" name="pages" required>
         </div>
         <div class="input-and-title">
             <label for="author">author</label>
-            <input type="text" id="author" name="author">
+            <input type="text" id="author" name="author" required>
         </div>
         <div class="input-and-title">
             <label for="read">read</label>
-            <input type="checkbox" id="read" name="read">
+            <input type="checkbox" id="read" name="read" required>
         </div>
-        <input type="button" onclick="addBookToLibrary()" value="add">
+        <input type="button" onclick="addBookToLibrary()" value="add" required>
     </form>
     <table>
         <thead>
